Add support for client web interface and move simulator

--- a/kees-server/web/static/css/kees.css
+++ b/kees-server/web/static/css/kees.css
@@ -32,3 +32,13 @@ i {
   text-transform: uppercase;
   font-weight: 800;
 }
+
+
+.device {
+  border-bottom: 1px solid #efefef;
+}
+
+.device .name {
+  font-size: 20px;
+  font-weight: 800;
+}
